---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 14. 03. 2023
  Changes:
    - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 11. 03. 2023
  Graphics:
    - New icons for the recipes that recycle items.
  Balancing:
    - Increased mining radius of advanced burner mining drill to make building new mining setups easier.  This may break existing mining setups if you have mixed ores.
    - Military Supply: Tweaked the amount of items requested per order.
    - Military Suuply: Light armor has been removed.  Heavy armor upgrade no longer grants inventory size bonuses.  Changed upgrade prices to compensate.
  Changes:
    - Tweaked some descriptions and some dialogue for the scenario.
    - Changed the name of the scenario to have a space between words.
    - Military Supply: Research is now disabled for all forces, not just the player's force.  I expect this never to be relevant.
    - Military Supply: The day-night cycle now has a period of 15 minutes.
    - Military Supply: Choosing the combat starter package now gives an armor with nightvision equipment installed.
    - Military Supply: Overhauled various parts of the code.  Most of you won't care, but I did it anyways.
    - Military Supply: Solar panels, laser turrets, and circuit network upgrades have been removed.
    - Military Supply: Added an additional mining productivity upgrade.
    - Military Supply: After a certain point, the scenario will no longer ask for basic firearm magazines.
  Gui:
    - Military Supply: Completely redesigned most of the GUIs in the scenario.
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 18. 12. 2020
  Changes:
    - Updated for Factorio version 1.1.