@@ -59,6 +59,7 @@ thoughts-unlock-wall=[color=0, 0.8, 0]The natives of this planet might not be to
 thoughts-choose-logistics=I'll take the logistics starter package.  I really need those transport belts.
 thoughts-choose-production=I want a starter package to give me a head-start on producing more resources.
 thoughts-choose-combat=Reports show this planet’s natives are a nuisance.  I'll need something to protect myself.
+thoughts-choose-richness-challenge=I don't serve the Empress because it is easy, I serve because I am needed.
 
 [military-supply-scenario-gui]
 title1=Military supply scenario
@@ -70,10 +71,14 @@ choose-starter-package=Choose a starter package
 starter-package-logistics=Logistics starter package
 starter-package-production=Production starter package
 starter-package-combat=Combat starter package
-starter-package-preview-item-qty=__2__ __1__
+starter-package-richness-challenge=Richness challenge
+starter-package-item-qty=__2__ __1__
 starter-package-crafting-bonus=+__1__% faster manual crafting
 starter-package-armor=Modular armor (with equipment)
 starter-package-force-map-chart=Map scan
+starter-package-money-multiplier=x__1__ goal reward
+starter-package-score-multiplier=x__1__ score
+starter-package-richness-penalty=Ore richness penalty
 main-objective=Complete as many goals as possible.\nThis is done by placing military items in the SUPPLY PICKUP CHEST.
 final-objective=Craft the ETERNITY RAY and place it in the SUPPLY PICKUP CHEST.
 time-remaining-title=Time remaining:
