@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 14. 03. 2023
+  Minor Features:
+    - Military Supply: Added a new starter package that creates an optional additional challenge.
   Changes:
     - Military Supply: Changed how starter packages are implemented.  I don't expect anyone to care about this.
 ---------------------------------------------------------------------------------------------------
